--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   </head>
   <body>
     <p>
-     <h1>class website</h1>
-     <h2>your name</h2>
+     <h1>DES 341: Interactive Media I: Fall 2021</h1>
+     <h2>Alexandra Charlton</h2>
     </p>
     
     <ul>
-      <li>Exercise 1</li>
-      <li>exercise 2</li>
+      <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">EXERCISE 1 (DONE)</a> </li>
+      <li> <a href="http://127.0.0.1:5500/Class-site/exercise2/index.html">EXERCISE 2 (WIP)</a> </li>
       <li>Exercise 3</li>
       <li>Exercise 4</li>
     </ul>
