--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <ul>
       <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">EXERCISE 1 (DONE)</a> </li>
-      <li> <a href="http://127.0.0.1:5500/Class-site/exercise2/index.html">EXERCISE 2 (WIP)</a> </li>
+      <li> <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">EXERCISE 2 (WIP)</a> </li>
       <li>Exercise 3</li>
       <li>Exercise 4</li>
     </ul>
