--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </p>
     
     <ul>
-      <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">EXERCISE 1 (DONE)</a> </li>
+      <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">PROJECT 1 (DONE)</a> </li>
       <li> <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">EXERCISE 2 (DONE)</a> </li>
       <li><a href="https://agc-pdx.github.io/Class-site/exercise3/index1.html">EXERCISE 3 (DONE)</a> </li>
       <li>Exercise 4</li>
