--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
     </p>
     
     <ul>
-      <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">PROJECT 1 (DONE)</a> </li>
-      <li> <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">EXERCISE 2 (DONE)</a> </li>
-      <li><a href="https://agc-pdx.github.io/Class-site/exercise3/index1.html">EXERCISE 3 (DONE)</a> </li>
-      <li>Exercise 4</li>
+      <li><a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">PROJECT 1: REPURPOSING TEXT</a> </li>
+      <li> <a href="">PROJECT 2: 25 VARIATIONS</a> </li>
+      <br>
+      <li> <a href="https://tinyurl.com/SlackAv">EXERCISE 1: SLACK AVATAR</a> </li>
+      <li> <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">EXERCISE 2: WIKI HOW</a> </li>
+      <li><a href="https://agc-pdx.github.io/Class-site/exercise3/index1.html">EXERCISE 3: WIKIHOW + CSS</a> </li>
+      <li> <a href="https://agc-pdx.github.io/Class-site/exercise4/index.html">EXERCISE 4: CODING FROM LIFE</a> </li>
+      <li> <a href="">EXERCISE 4.5: WEBSITE PORTRAIT</a> </li>
+      <br>
+      <li> <a href="">WORKSHOP 1: ALL HTML</a> </li>
+     
     </ul>
   </body>
 </html>
