--- a/exercise4/index.html
+++ b/exercise4/index.html
@@ -8,12 +8,36 @@
 
   <body>
     <div class="canvas">
-    
-      <div class="envelope">
-        <div class="back paper"></div>
-        <div class="contents"></div>
-        <div class="front paper"></div>
+      <div class="box">
+        <div class="pad"></div>
+        <div class="stripe1"></div>
+        <div class="stripe2"></div>
+        <div class="stripe3"></div>
+        <div class="stripe4"></div>
+        <div class="stripe5"></div>
+        <div class="stripe6"></div>
+        <div class="stripe7"></div>
+        <div class="hole1"></div>
+        <div class="hole2"></div>
+        <div class="hole3"></div>
+        <div class="hole4"></div>
+        <div class="hole5"></div>
+        <div class="hole6"></div>
+        <div class="hole7"></div>
+        <div class="hole8"></div>
+        <div class="ring1"></div>
+        <div class="ring2"></div>
+        <div class="ring3"></div>
+        <div class="ring4"></div>
+        <div class="ring5"></div>
+        <div class="ring6"></div>
+        <div class="ring7"></div>
+        <div class="ring8"></div>
+        <div class="ruler-hole"></div>
+        <div class="ruler-hole-shadow"></div>
       </div>
+    
+
 
     </div>
 
@@ -25,3 +49,4 @@
     </div>
   </body>
 </html>
+ 
