--- a/project2/index.html
+++ b/project2/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
      <div id="title">
-        <h1><u>Epiphany001</u></h1>
+        <h1><u>Epiphany000</u></h1>
                 <h3>MARK PETERSEN<br>
                     <i>I Got  Drunk Then Poetry</i><br>_____________________
                 </h3>
@@ -10,9 +10,29 @@
 <body>
     <ul>
         <div id="level001">
-          <li><h4>Level001</h4></li>
+          <li><h3>Level001</h3></li>
                 <ul>
                     <li><a href="level1/Epiphany001/index.html">Epiphany001</a></li>
+                    <li><a href="level1/Epiphany002/index.html">Epiphany002</a></li>
+                    <li><a href="level1/Epiphany003/index.html">Epiphany003</a></li>
+                    <li><a href="level1/Epiphany004/index.html">Epiphany004</a></li>
+                    <li><a href="level1/Epiphany005/index.html">Epiphany005</a></li>
 
+                </ul>
+            </div>
+
+     <div id="level002">
+        <li><h3>Level002</h3></li>
+            <ul>
+            <li><a href="level2/Epiphany006/index.html">Epiphany006</a></li>
+            <li><a href="level2/Epiphany007/index.html">Epiphany007</a></li>
+            <li><a href="level2/Epiphany008/index.html">Epiphany008</a></li>
+            <li><a href="level2/Epiphany009/index.html">Epiphany009</a></li>
+            <li><a href="level2/Epiphany010/index.html">Epiphany010</a></li>
+
+
+         
+            </div>
+            
 
 </body>
