--- a/project2/index.html
+++ b/project2/index.html
@@ -1,10 +1,11 @@
 <html lang="en">
 <head>
-     <div id="title">
-        <h1><u>Epiphany000</u></h1>
-                <h3>MARK PETERSEN<br>
-                    <i>I Got  Drunk Then Poetry</i><br>_____________________
-                </h3>
+    <div id="title">
+        <h1><u>Put Zebras By The Mississippi</u></h1>
+                <h2>
+                    ELI SIEGEL (1956)<br>
+                    ___________________________________
+                </h2>
                     
 </head>
 <body>
@@ -12,11 +13,11 @@
         <div id="level001">
           <li><h3>Level001</h3></li>
                 <ul>
-                    <li><a href="level1/Epiphany001/index.html">Epiphany001</a></li>
-                    <li><a href="level1/Epiphany002/index.html">Epiphany002</a></li>
-                    <li><a href="level1/Epiphany003/index.html">Epiphany003</a></li>
-                    <li><a href="level1/Epiphany004/index.html">Epiphany004</a></li>
-                    <li><a href="level1/Epiphany005/index.html">Epiphany005</a></li>
+                    <li><a href="level1/ZEBRA001/index.html">ZEBRA001</a></li>
+                    <li><a href="level1/ZEBRA002/index.html">ZEBRA002</a></li>
+                    <li><a href="level1/ZEBRA003/index.html">ZEBRA003</a></li>
+                    <li><a href="level1/ZEBRA004/index.html">ZEBRA004</a></li>
+                    <li><a href="level1/ZEBRA005/index.html">ZEBRA005</a></li>
 
                 </ul>
             </div>
@@ -24,11 +25,11 @@
      <div id="level002">
         <li><h3>Level002</h3></li>
             <ul>
-            <li><a href="level2/Epiphany006/index.html">Epiphany006</a></li>
-            <li><a href="level2/Epiphany007/index.html">Epiphany007</a></li>
-            <li><a href="level2/Epiphany008/index.html">Epiphany008</a></li>
-            <li><a href="level2/Epiphany009/index.html">Epiphany009</a></li>
-            <li><a href="level2/Epiphany010/index.html">Epiphany010</a></li>
+            <li><a href="level2/ZEBRA006/index.html">ZEBRA006</a></li>
+            <li><a href="level2/ZEBRA007/index.html">ZEBRA007</a></li>
+            <li><a href="level2/ZEBRA008/index.html">ZEBRA008</a></li>
+            <li><a href="level2/ZEBRA009/index.html">ZEBRA009</a></li>
+            <li><a href="level2/ZEBRA010/index.html">ZEBRA010</a></li>
 
 
          
