--- a/project2/level2/ZEBRA010/index.html
+++ b/project2/level2/ZEBRA010/index.html
@@ -61,7 +61,7 @@
     Palm-trees are.
     <br>
     
-zzzz    Anywhere’s anywhere, anywhere’s everywhere.
+    Anywhere’s anywhere, anywhere’s everywhere.
     <br>
     
     Anything’s everywhere.
