--- a/project2/level3/ZEPA014/index.html
+++ b/project2/level3/ZEPA014/index.html
@@ -18,9 +18,9 @@
     &Not so by, but by.
     <br> 
       
-    Where the palm-tree waves slowly in heat, with many-
+    Where the palm-tree waves slowly in heat,
     <BR>
-    colored, little live things all about, 
+    with many-colored, little live things all about, 
     <br>
     green, orange, pink, black, purple, red and all,
      <br>
