--- a/project2/level3/ZEBRA011/index.html
+++ b/project2/level3/ZEBRA011/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
   <div id="title">
     <h1><u>Put Zebras By The Mississippi</u></h1>
             <h2>
@@ -9,6 +10,7 @@
                     
 </head>
 <BODY>
+    <p>
     Swiftly in forests, the zebra,
     <br>
     Slowly the Mississippi;  
@@ -72,4 +74,5 @@
     
     O, do.
     <br>
+    </p>
 </BODY>
