--- a/project2/level3/ZEBRA012/index.html
+++ b/project2/level3/ZEBRA012/index.html
@@ -1,11 +1,12 @@
 <html lang="en">
-<head>
-  <div id="title">
-    <h1><u>Put Zebras By The Mississippi</u></h1>
-            <h2>
-                ELI SIEGEL (1956)<br>
-                <hr>
-            </h2>
+    <head>
+        <link rel="stylesheet" href="style.css">
+      <div id="title">
+        <h1><u>Put Zebras By The Mississippi</u></h1>
+                <h2>
+                    ELI SIEGEL (1956)<br>
+                    <hr>
+                </h2>
                     
 </head>
 <BODY>
