--- a/project2/level3/ZEBRA014/index.html
+++ b/project2/level3/ZEBRA014/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+  <head>
+    <link rel="stylesheet" href="style.css">
   <div id="title">
     <h1><u>Put Zebras By The Mississippi</u></h1>
             <h2>
@@ -18,11 +20,11 @@
     &Not so by, but by.
     <br> 
       
-    Where the palm-tree waves slowly in heat, with many-
+    Where the palm-tree waves slowly in heat,
     <BR>
-        colored, little live things all about, green, orange, pink,
-        <br>
-     black, purple, red and all,
+    with many-colored, little live things all about, 
+    <br>
+    green, orange, pink, black, purple, red and all,
      <br>
     
     O, do say, the Mississippi flows slowly.
