--- a/project2/index.html
+++ b/project2/index.html
@@ -1,5 +1,7 @@
 <html lang="en">
 <head>
+    <head>
+        <link rel="stylesheet" href="style.css">
     <div id="title">
         <h1><u>Put Zebras By The Mississippi</u></h1>
                 <h2>
@@ -9,6 +11,18 @@
                     
 </head>
 <body>
+    <div class="dropdown">
+        <button class="dropbtn">LEVEL1</button>
+        <div class="dropdown-content">
+          <a href="level1/ZEBRA001/index.html">ZEBRA 001</a>
+          <a href="level1/ZEBRA002/index.html">ZEBRA 002</a>
+          <a href="level1/ZEBRA003/index.html">ZEBRA 003</a>
+          <a href="level1/ZEBRA004/index.html">ZEBRA 004</a>
+          <a href="level1/ZEBRA005/index.html">ZEBRA 005</a>
+        </div>
+      </div>
+      
+
     <ul>
         <div id="level001">
           <li><h3>Level001</h3></li>
