--- a/project2/level2/ZEBRA006/index.html
+++ b/project2/level2/ZEBRA006/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
   <div id="title">
-    <h1><u>Put Zebras By The Mississippi</u></h1>
+    <h1><u>Put Zebras By The Mississippi (006)</u></h1>
             <h2>
                 ELI SIEGEL (1956)<br>
                 <hr>
