--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     
     <ul>
       <li>PROJECT 1: <a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">REPURPOSING TEXT</a> </li>
-      <li>PROJECT 2: <a href="https://agc-pdx.github.io/Class-site/project2/index.html">25 VARIATIONS</a> </li>
+      <li>PROJECT 2: <a href="/Class-site/project2/">25 VARIATIONS</a> </li>
       <br>
       <li>EXERCISE 1: <a href="https://tinyurl.com/SlackAv">SLACK AVATAR</a> </li>
       <li>EXERCISE 2: <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">WIKI HOW</a> </li>
