--- a/project2/level1/ZEBRA005/index.html
+++ b/project2/level1/ZEBRA005/index.html
@@ -2,7 +2,7 @@
   <head>
 
     
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="STYLE.CSS" type="text/css" />
     <link rel="stylesheet" href="https://use.typekit.net/ple1cxq.css">
 
  
