--- a/project2/level4/ZEBRA017/index.html
+++ b/project2/level4/ZEBRA017/index.html
@@ -3,7 +3,7 @@
   <head>
 
     
-    <link rel="stylesheet" href="style.css" type="text/css" />
+    <link rel="stylesheet" href="STYLE.CSS" type="text/css" />
     <link rel="stylesheet" href="https://use.typekit.net/ple1cxq.css">
 
  
