--- a/project2/index.html
+++ b/project2/index.html
@@ -26,7 +26,11 @@
 
     <ul>
         <div id="level001">
-          <li><h3>Level001</h3></li>
+          <li><h3>
+            <li><a href="/Class-site/project2/level1/ ">Level001</a></li>
+        
+        
+        </h3></li>
                 <ul>
                     <li><a href="level1/ZEBRA001/index.html">ZEBRA001</a></li>
                     <li><a href="level1/ZEBRA002/index.html">ZEBRA002</a></li>
