--- a/project2/index.html
+++ b/project2/index.html
@@ -42,7 +42,11 @@
             </div>
 
      <div id="level002">
-        <li><h3>Level002</h3></li>
+        <li><h3>
+            <li><a href="/Class-site/project2/level2/ ">Level002</a></li>
+        
+        
+        </h3></li>
             <ul>
             <li><a href="level2/ZEBRA006/index.html">ZEBRA006</a></li>
             <li><a href="level2/ZEBRA007/index.html">ZEBRA007</a></li>
