--- a/project2/level5/ZEBRA025/index.html
+++ b/project2/level5/ZEBRA025/index.html
@@ -14,7 +14,7 @@
 
    <div class= upper>
 
-    <div class="left"> <a href=" /Class-site/project2/">
+    <div class="left"> <a href="/Class-site/project2/level5/ZEBRA024/">
         
         <img alt="left" src="https://www.linkpicture.com/q/arrowbackactive.png" 
         
