--- a/project2/level4/index.html
+++ b/project2/level4/index.html
@@ -98,7 +98,7 @@
     
     <div class="title">Goals</div>
 
-    <div class="text">Focus on positioning elements using CSS. Experiment with space and possibly try a very tall page or a very wide page which utilizes horizontal scroll.
+    <div class="text">Focus on typography using CSS. Experiment with hierarchy and scale.
 
 
     </div>
