--- a/project2/level3/ZEBRA013/index.html
+++ b/project2/level3/ZEBRA013/index.html
@@ -51,18 +51,34 @@
         <p><br>
     </head>
 <BODY>
-    Swiftly in forests, the zebra,
-    <br>
-    Slowly the Mississippi;  
-    <br>
+
+    <div class="box1">
+   <h3>Swiftly in forests, the zebra,</h3> 
+  
+
+   
+</div>
+
+    <div class="box2">
+        <h5>Slowly the Mississippi;  
     Zebras are by the Mississippi,
-    <br> 
-    &Not so by, but by.
-    <br> 
-      
-    Where the palm-tree waves slowly in heat, with many-
-    <BR>
-        colored, little live things all about, green, orange, pink,
+    &Not so by, but by</h5>
+    
+   </div>
+   
+<div class="box3"><h6>
+    Where the palm-tree waves slowly in heat, with many-colored, little live things all about,
+
+</h6>
+
+</div>
+
+
+
+<p><br><br><br><br><br><br><br><br><br><br><br><br>
+    <p><p><p><p><p><p><p><p><p><p><p><p><p><p><p>
+        <p><br><br><br><br><br><br><br><br><br><br><br><br>
+         green, orange, pink,
         <br>
      black, purple, red and all,
      <br>
