--- a/project3/index.html
+++ b/project3/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+        <link rel="stylesheet" href="style.css">
 <head>
 </head>
         <body>
 
 
+
+<h1 id="title">???</h1>
+
+<form id="f1">
+
+<input id="myinput" type="text" placeholder="Make a Wish"><br>
+
+<button id="send">Upon a Star</button>
+
+</form>
+
+
+
+<script
+src="https://code.jquery.com/jquery-3.6.0.min.js"
+integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+crossorigin="anonymous"></script>
+<script src="script.js"></script>
 
 </body>
 </html>
