--- a/project3/index.html
+++ b/project3/index.html
@@ -13,9 +13,18 @@
 
 <input id="myinput" type="text" placeholder="Make a Wish"><br>
 
-<button id="send">Upon a Star</button>
+<button id="btn">Upon a Star</button>
 
-</form>
+
+<p>
+
+<a href="https://ibb.co/cyYM4GJ"><img src="https://i.ibb.co/nwPZxHr/planet1.png" id="planet1" width="auto"
+        height="80"
+        ></a><br />
+
+
+<a href="https://ibb.co/BtQS1R4"><img src="https://i.ibb.co/L8c2GfQ/saturn.png" id="saturn" width="auto"
+        height="80"></a>
 
 
 
