--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
     </p>
     
     <ul>
-      <li>PROJECT 3: <a href="https://docs.google.com/presentation/d/1MZP8HI1_wN0vqHJLiX45Y0cNjjffiMmwU-2nv_AsERY/edit?usp=sharing">CONCECPTS</a> </li>
-<BR>
+      
+
       <li>PROJECT 1: <a href="https://docs.google.com/spreadsheets/d/101fElZIKMloJLHKAeIlftRpeasJzjjHDkQhQfVP98pU/edit?usp=sharing">REPURPOSING TEXT</a> </li>
       <li>PROJECT 2: <a href="/Class-site/project2/">25 VARIATIONS</a> </li>
+      <li>PROJECT 3: <a href="https://docs.google.com/presentation/d/1MZP8HI1_wN0vqHJLiX45Y0cNjjffiMmwU-2nv_AsERY/edit?usp=sharing">CONCECPTS</a> </li>
+      <li>PROJECT 3: <a href="/Class-site/project3/">PLAY!</a> </li>
       <br>
       <li>EXERCISE 1: <a href="https://tinyurl.com/SlackAv">SLACK AVATAR</a> </li>
       <li>EXERCISE 2: <a href="https://agc-pdx.github.io/Class-site/exercise2/index1.html">WIKI HOW</a> </li>
